# engineer23

./: README.md
src/: CMakeLists.txt
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/launch/: path_plan.launch  realsense_debug_gazebo.launch  realsense_debug_real.launch  realsense_debug_rviz.launch  realsense_set.launch  rgb_get_pos.launch  rgb_hist.launch
src/robot_control/msg/: move_pose_steps.msg  target_position_pose.msg
src/robot_control/rviz/: hist.rviz  path_plan.rviz  rgb_pos.rviz  test.rviz  test_real.rviz
src/robot_control/scripts/: get_robot_path.py  get_target_frame.py  get_target_world_pose_step1.py  get_target_world_pose_step2.py  lib_get_rgb_pos.py  (+5 more)
src/robot_description5/: CMakeLists.txt  package.xml
src/robot_moveit_config4/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_moveit_config4/config/: fake_controllers.yaml  gazebo_robot.urdf  inertial.head.xacro  joint_limits.yaml  ompl_planning.yaml  robot.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  test.urdf
src/robot_moveit_config4/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/robot_moveit_config4/world/: test.world
(+27 files in other folders)
